Removed disk note

--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
@@ -34,12 +34,10 @@ The CloudForms appliance console automatically logs out after five minutes of in
 [discrete]
 ==== Configuring an Internal Database
 
-CloudForms uses a database to store information about the environment. *(%AP: I included only the internal DB. Should I include option for external DB?)*
+CloudForms uses a database to store information about the environment.
 
-[IMPORTANT]
-====
-Before installing an internal database, add a disk to the infrastructure hosting your appliance. See the documentation specific to your infrastructure for instructions for adding a disk. As a storage disk usually cannot be added while a virtual machine is running, Red Hat recommends adding the disk before starting the appliance. CloudForms only supports installing of an internal VMDB on blank disks; installation will fail if the disks are not blank.
-====
+[discrete]
+===== Procedure
 
 . Start the appliance and open a terminal console.
 ifdef::login[]
@@ -61,7 +59,7 @@ All CloudForms appliances in a multi-region deployment must use the same key.
 ====
 +
 . Choose *1) Create Internal Database* for the database location.
-. Choose a disk for the database. This can be either a disk you attached previously, or a partition on the current disk. 
+. Choose a disk for the database. This can be either a disk you attached previously, or a partition on the current disk.
 +
 [IMPORTANT]
 ====
@@ -87,6 +85,6 @@ If there is an unpartitioned disk attached to the virtual machine, the dialog wi
 Creating a new region destroys any existing data on the chosen database.
 ====
 +
-.  Create and confirm a password for the database.
+. Create and confirm a password for the database.
 
 CloudForms configures the internal database.
