--- a/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
@@ -5,6 +5,7 @@
 * GA date: August 14, 2018
 * Contacts: link:mailto:sbream@redhat.com[Steve Bream] (CS), link:mailto:apinnick@redhat.com[Avital Pinnick] (TW)
 
+
 [[Introduction]]
 == Introduction
 
@@ -21,4 +22,7 @@ The infrastructure migration has 5 key stages:
 * Planning
 * Migration
 * Post-migration
+
+Future stuff to put in: How long will migration take for x number of VMs?
+How many machines do they need?
 
