--- a/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
@@ -1,42 +1,25 @@
 [[Authenticating_RHV_Manager_and_Hosts]]
 === Authenticating Red Hat Virtualization Manager and Hosts
 
-*(%AP: Do we need "1.3.1. Enabling Red Hat Virtualization Capacity and Utilization Data Collection"? Or can it be omitted for this part?)*
+Authenticate the Manager so that CloudForms can connect to it:
 
-[discrete]
-==== Authenticating Red Hat Virtualization Manager
-
-After you have discovered Red Hat Virtualization Manager, you must authenticate the Manager so that CloudForms can connect:
-
-. Select the appropriate *Zone* for the provider.
-  By default, the zone is set to *default*.
-. In the *Credentials* area, under *Default*, provide the login credentials  for the Manager administrative user:
-* Enter the user name (formatted as `admin@internal`) in the *Username* field.
-* Enter the password in the *Password* field.
-* Confirm the password in the *Confirm Password* field.
-* Click *Validate* to confirm CloudForms can connect to the Manager.
+. Select the *Zone* for the provider.
+. In the *Credentials* area, under *Default*, enter the user name (formatted as `admin@internal`) in the *Username* field.
+. Enter the password in the *Password* field.
+. Confirm the password in the *Confirm Password* field.
+. Click *Validate*.
 . Click *Add*.
 
-After authenticating the Manager, you must authenticate its hosts. You can use the administrator credentials.
-
-[discrete]
-==== Authenticating Red Hat Virtualization Hosts
+After authenticating the Manager, authenticate its hosts, using the administrator credentials:
 
 . Go to menu:Compute[Infrastructure > Providers].
 . Click on a provider to display its summary screen.
 . On the summary screen, click *Hosts* in the *Relationships* information box to display the hosts on that provider.
 . Select the hosts to authenticate.
-  You can select all hosts using the *Check All* option.
-. Click  image:1847.png[Configuration] (*Configuration*).
-. Click  image:1851.png[Edit this item] (*Edit this item*).
-. In the *Credentials* area, enter credentials for the following, as required:
- .. *Default*: This field is mandatory. Users should have privileged access such as, root or administrator. 
- .. *Remote Login*: Credentials for this field are required if SSH login is disabled for the *Default* account. *(%AP: Do we need this?)*
- .. *Web Services*: This tab is used for access to Web Services in Red Hat Virtualization. *(%AP: Do we need this?)*
- .. *IPMI*:  This tab is used for access to IPMI. *(%AP: Do we need this?)*
++
+You can select all hosts using the *Check All* option.
+. Click image:1847.png[Configuration] (*Configuration*).
+. Click image:1851.png[Edit this item] (*Edit this item*).
+. In the *Credentials* area, enter the *Default* credentials. This field is mandatory. Users should have privileged access such as `root` or `administrator`.
 . Click *Validate*.
-. If editing multiple hosts:
- .. Select a host from the *Select Host to validate against* list.
- .. If required, enter credentials for *Remote Login*, *Web Services*, and *IPMI* in their respective tabs; click *Validate*. *(%AP: Do we need this?)*
- .. Select another host to validate each of these credentials against.
 . Click *Add*.
