--- a/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_VMware_vCenter_and_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_VMware_vCenter_and_hosts.adoc
@@ -1,37 +1,26 @@
 [[Authenticating_VMware_vCenter]]
 === Authenticating VMware vCenter and Hosts
 
-[discrete]
-==== Authenticating VMware vCenter
-
-After you have discovered VMware vCenter, you must authenticate vCenter so that CloudForms can connect:
+Authenticate vCenter so that CloudForms can connect to it:
 
 . Select the appropriate *Zone* for the provider.
-  By default, the zone is set to *default*.
-. In the *Credentials* area, under *Default*, provide the login credentials  for the VMware vCenter administrative user:
-* Enter the user name in the *Username* field.
-* Enter the password in the *Password* field.
-* Confirm the password in the *Confirm Password* field.
-* Click *Validate* to confirm CloudForms can connect to the VMware vCenter.
+. In the *Credentials* area, under *Default*, enter the user name in the *Username* field.
+. Enter the password in the *Password* field.
+. Confirm the password in the *Confirm Password* field.
+. Click *Validate* to confirm CloudForms can connect to the VMware vCenter.
 . Click *Add*.
 
-After authenticating vCenter, you must authenticate its hosts. You can use the administrator credentials.
+After authenticating vCenter, authenticate its hosts using the administrator credentials:
 
-[discrete]
-==== Authenticating VMware vCenter Hosts 
-
-. Navigate to menu:Compute[Infrastructure > Providers]. 
-. Click on a provider to display its summary screen. 
+. Go to menu:Compute[Infrastructure > Providers]. 
+. Click a provider to display its summary screen. 
 . On the summary screen, click *Hosts* in the *Relationships* information box to display the hosts on that provider. 
-. Select the hosts to authenticate.
-  You can select all hosts using the *Check All* option. 
-. Click  image:1847.png[Configuration] (*Configuration*)			
-. Click  image:1851.png[Edit Selected items] (*Edit Selected items*).
-. In the *Credentials* area, under *Default*, provide the VMware ESXi login credentials:
-* Enter the user name in the *Username* field. 
-* Enter the password in the *Password* field. 
-* Confirm the password in the *Confirm Password* field. 
-* Click *Validate* to confirm CloudForms can connect to the VMware vCenter host. 
-. If editing multiple hosts, select a host from the *Select Host to validate against* list. Provide the VMware ESXi login credentials and click *Validate*.
+. Select the hosts to authenticate. 
+. Click image:1847.png[Configuration] (*Configuration*)			
+. Click image:1851.png[Edit Selected items] (*Edit Selected items*).
+. In the *Credentials* area, under *Default*, enter the user name in the *Username* field. 
+. Enter the password in the *Password* field. 
+. Confirm the password in the *Confirm Password* field. 
+. Click *Validate* to confirm CloudForms can connect to the VMware vCenter host. 
 . Click *Save*.
 
