--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,18 +1,15 @@
 [[Creating_an_Infrastructure_Mapping]]
 === Creating an Infrastructure Mapping
 
-You must create an infrastructure mapping to map your VMware resources to Red Hat Virtualization resources.
+Create an infrastructure mapping to map your VMware resources to Red Hat Virtualization resources:
 
-[discrete]
-==== Procedure
-
-. Go to menu:Compute[Migration > Overview] and click *Create Infrastructure Mapping*.
-. Enter the name of your mapping and click *Next*. The description is optional.
+. Go to menu:Compute[Migration] and click *Create Infrastructure Mapping*.
+. Enter the name of your mapping and click *Next*.
 . Select a source cluster and a target cluster.
 . Click *Add Mapping* and *Next*.
 . Select a source datastore and a target datastore.
 . Click *Add Mapping* and *Next*.
-. Select a source network and a target network (default is `ovirtmgmt`).
+. Select a source network and a target network.
 . Click *Add Mapping* and *Create*.
 . If a successful mapping message is displayed, click *Close*. Your infrastructure mapping is displayed in menu:Compute[Migration > Overview] and you can create a migration plan.
 
