--- a/doc-V2V_Guide/cfme/doc/modules/proc_Logging_in_to_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Logging_in_to_CloudForms.adoc
@@ -4,22 +4,21 @@
 
 Once CloudForms is installed, you can log in and perform administration tasks.
 
-Log in to CloudForms for the first time after installing by:
+Log in to CloudForms after installation:
 
-.  Navigate to the URL for the login screen. (_https://xx.xx.xx.xx_ on the virtual machine instance)
+.  In a browser, go to `https://_CloudForms_FQDN_` for the welcome screen.
 .  Enter the default credentials (Username: *admin* | Password: *smartvm*) for the initial login.
 .  Click *Login*.
 
 [discrete]
 ==== Changing CloudForms Password
 
-Change your password to ensure more private and secure access to CloudForms.
+Change your password for security:
 
-. Navigate to the URL for the login screen. (_https://xx.xx.xx.xx_ on the virtual machine instance)
+. Log out of CloudForms, to go to the welcome screen.
 . Click *Update Password* beneath the *Username* and *Password* text fields.
 . Enter your current *Username* and *Password* in the text fields.
-. Input a new password in the *New Password* field.
+. Enter a new password in the *New Password* field.
 . Repeat your new password in the *Verify Password* field.
 . Click *Login*.
 
-*(%AP: Do we need to include procedure to create worker appliance? Or can it be omitted?)*
