--- a/doc-V2V_Guide/cfme/doc/asm_Planning.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Planning.adoc
@@ -3,32 +3,33 @@
 
 A well-planned migration is critical for success. TBD
 
-Stages:
+The planning process has x key stages:
 
-* Creating playbooks for pre- and post-migration tasks
-* Creating migration groups
-* Creating a schedule
+* Create playbooks for pre- and post-migration tasks
+* Create migration groups
+* Create a schedule
 
 === Creating Playbooks for Pre- and Post-migration Tasks
 
 Create Ansible playbooks for pre-migration tasks:
 
 * Task 1
-
-Create Ansible playbooks for -migration tasks:
-
-* Task 1
+* Task 2
 
 === Creating Migration Groups
 
 Virtual Machines:
+
 * How are the virtual machines grouped?
 * Which virtual machines should be migrated together?
+
+Workloads:
 
 * What workloads need to migrate together?
 * What applications must remain available?
 
-Best practices: 
+Best practices:
+
 * Keep linked applications together and migrate at the same time
 * Move critical applications during maintenance windows
 * Plan for redundancy
@@ -40,8 +41,9 @@ Best practices:
 * What downtime can I anticipate?
 
 Best Practices:
-* Preparing users for downtime
-* Minimizing impact on your environment 
+
+* Prepare users for downtime
+* Minimize impact on your environment 
 ** Throttling
 ** Scheduling
 
