--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_a_host_to_the_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_a_host_to_the_Manager.adoc
@@ -1,29 +1,24 @@
 [[Adding_a_host_to_the_Manager]]
 === Adding a Host to the Red Hat Virtualization Manager
 
-Adding a host to your Red Hat Virtualization environment can take some time, as the following steps are completed by the platform: virtualization checks, installation of packages, and creation of a bridge. Use the details pane to monitor the process as the host and the Manager establish a connection.
+[NOTE]
+====
+Adding a host to your Red Hat Virtualization environment can take some time, as the following steps are completed by the platform: virtualization checks, installation of packages, and creation of a bridge.
+====
 
-[discrete]
-==== Procedure
+Add a host to the Manager:
 
-. From the Administration Portal, click menu:Compute[Hosts].
+. In the Administration Portal, click menu:Compute[Hosts].
 . Click btn:[New].
 . Use the drop-down list to select the *Data Center* and *Host Cluster* for the new host.
 . Enter the *Name* and the *Address* of the new host. The standard SSH port, port 22, is auto-filled in the *SSH Port* field.
-. Select an authentication method to use for the Manager to access the host.
-* Enter the root user's password to use password authentication.
-* Alternatively, copy the key displayed in the *SSH PublicKey* field to */root/.ssh/authorized_keys* on the host to use public key authentication.
-. Click the *Advanced Parameters* button to expand the advanced host settings.
-* Optionally disable automatic firewall configuration.
-* Optionally add a host SSH fingerprint to increase security. You can add it manually, or fetch it automatically.
-. Optionally configure power management, where the host has a supported power management card. For information on power management configuration, see link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Host_Power_Management_settings_explained[Host Power Management Settings Explained] in the _Administration Guide_.
+. Enter the `root` password.
+. Click btn:[OK]. The power management reminder is displayed.
 . Click btn:[OK].
-
-The new host appears in the list of hosts with a status of `Installing`, and you can view the progress of the installation in the details pane. After a brief delay the host status changes to *Up*.
++
+The new host appears in the list of hosts with the status, `Installing`, and you can view the progress of the installation in the details pane. After a brief delay the host status changes to *Up*.
 
 [IMPORTANT]
 ====
 Keep the environment up-to-date. See link:https://access.redhat.com/articles/2974891[] for more information. Since bug fixes for known issues are frequently released, Red Hat recommends using scheduled tasks to update the hosts and the Manager.
 ====
-
-
