--- a/doc-V2V_Guide/cfme/doc/modules/proc_Connecting_to_the_Administration_Portal.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Connecting_to_the_Administration_Portal.adoc
@@ -2,9 +2,9 @@
 [discrete]
 ==== Connecting to the Administration Portal
 
-You can access the Administration Portal using a web browser:
+Access the Administration Portal using a web browser:
 
-. In a web browser, navigate to `https://_your-manager-fqdn_/ovirt-engine`, replacing _your-manager-fqdn_ with the fully qualified domain name that you provided during installation.
+. In a web browser, go to `https://_your-manager-fqdn_/ovirt-engine`, replacing _your-manager-fqdn_ with the fully qualified domain name that you provided during installation.
 . Click *Administration Portal*. An SSO login page is displayed. SSO login enables you to log in to the Administration and VM Portal at the same time.
 . Enter your *User Name* and *Password*. If you are logging in for the first time, use the user name *admin* and the password that you specified during installation.
 . Select the domain against which to authenticate from the *Domain* list. If you are logging in using the internal *admin* user name, select the *internal* domain.
@@ -16,6 +16,5 @@ You can access the Administration Portal using a web browser:
 Keep the environment up-to-date. See link:https://access.redhat.com/articles/2974891[] for more information. Since bug fixes for known issues are frequently released, Red Hat recommends using scheduled tasks to update the hosts and the Manager.
 ====
 
-To log out of the Red Hat Virtualization Administration Portal, click your user name in the header bar and click *Sign Out*. You are logged out of all portals and the Manager welcome screen is displayed.
-
+To log out of the Red Hat Virtualization Administration Portal, click your user name in the header bar and select *Sign Out*. You are logged out of all portals and the Manager welcome screen is displayed.
 
