--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_a_Conversion_Host.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_a_Conversion_Host.adoc
@@ -1,17 +1,14 @@
 [[Creating_a_Conversion_Host]]
 === Creating a Conversion Host
 
-You must configure a Red Hat Virtualization Host as a conversion host.
-
-[discrete]
-==== Procedure
+Configure a Red Hat Virtualization Host as a conversion host:
 
 . In CloudForms, go to menu:Compute[Infrastructure > Hosts].
 . Select a Red Hat Virtualization Host.
 . Click the *Policy* drop-down button and select *Edit Tags*.
-. Select *V2V - Transformation Host* from the customer tag drop-down list and *t* from the assigned value drop-down list.
-. Select *V2V - Transformation Method* from the customer tag drop-down list and *VDDK* from the assigned value drop-down list.
-. Click *Save*. A success message is displayed.
+. Select *V2V - Transformation Host* from the tag drop-down list and *t* as the assigned value.
+. Select *V2V - Transformation Method* from the tag drop-down list and *VDDK* as the assigned value.
+. Click *Save*.
 . Select the same host, click the *Configuration* drop-down button, and select *Edit this item*.
 . In the *Default* tab of the *Endpoints* section, enter the *Username* `root` and the password.
 . Click *Validate*. If a success message is displayed, click *Save*.
