--- a/doc-V2V_Guide/cfme/doc/modules/proc_Discovering_infrastructure_providers.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Discovering_infrastructure_providers.adoc
@@ -1,15 +1,15 @@
 [[Discovering_infrastructure_providers]]
 === Discovering Infrastructure Providers
 
-You can discover all infrastructure providers in a given subnet range. *(%AP: Is this OK or is it better to discover VMware and RHV providers separately?)*
+Discover your infrastructure providers in a defined subnet range:
 
-. Navigate to menu:Compute[Infrastructure > Providers].
-. Click image:1847.png[Configuration] (*Configuration*) and click  image:1942.png[Discover Infrastructure Providers] (*Discover Infrastructure Providers*). 
-. Select the types of provider to discover.
-. Enter a *Subnet Range* of IP addresses starting with a *From Address* and ending with a *To Address*. The cursor automatically advances as you complete each octet.
+. Go to menu:Compute[Infrastructure > Providers].
+. Click image:1847.png[Configuration] (*Configuration*) and click image:1942.png[Discover Infrastructure Providers] (*Discover Infrastructure Providers*). 
+. Select *VMware vCenter* and *Red Hat Virtualization* as the infrastructure providers to discover.
+. Enter a *Subnet Range* of IP addresses starting with a *From Address* and ending with a *To Address*.
 . Click *Start*.
-
-The appliance searches for all infrastructure providers in the specified subnet range and adds them to the user interface. 
++
+The appliance searches for infrastructure providers in the specified subnet range and adds them to the user interface. 
 
 To manage the providers you have discovered, you must edit each provider and specify authentication details.
 
