--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
@@ -1,19 +1,17 @@
 [[Installing_Red_Hat_Virtualization_Manager]]
 === Installing Red Hat Virtualization Manager
-:refdir: ../reference
-:procdir: ../procedure
 
 The procedure for installing Red Hat Virtualization Manager has 5 key stages:
 
-* Ensuring that your system meets the prerequisites
-* Enabling the Manager repositories
-* Installing the Manager packages
-* Configuring the Manager
-* Connecting to the Administration Portal
+* Ensure that your system meets the prerequisites
+* Enable the Manager repositories
+* Install the Manager packages
+* Configure the Manager
+* Connect to the Administration Portal
 
 [NOTE]
 ====
-These procedures describe how to install and configure a basic Red Hat Virtualization environment. For more options, see the link:https://access.redhat.com/documentation/en/red-hat-virtualization/[Red Hat Virtualization Documentation].
+These procedures describe how to set up a basic Red Hat Virtualization environment with a local Manager database and Data Warehouse. For more options, see the link:https://access.redhat.com/documentation/en/red-hat-virtualization/[Red Hat Virtualization Documentation].
 ====
 
 [discrete]
@@ -32,7 +30,7 @@ Your system must meet the following minimum requirements to install the Red Hat 
 +
 Do not install any additional packages after the base installation, as they may cause dependency issues when attempting to install the packages required by the Manager.
 +
-Do not enable additional repositories. The required repositories are specified in xref:Enabling_the_Manager_Repositories[].
+Do not enable additional repositories. The required repositories are specified in the next section, xref:Enabling_the_Manager_Repositories[Enabling the Manager Repositories].
 
 [[Enabling_the_Manager_Repositories]]
 [discrete]
@@ -106,7 +104,7 @@ To list all enabled repositories, run:
 +
 [NOTE]
 ====
-Reboot the machine if any kernel-related packages have been updated.
+Reboot the machine if any kernel-related packages have been updated. *(%AP: Why don't we just tell them to reboot instead of making it optional? There are almost always kernel-related packages that are updated.)*
 ====
 +
 . Install the `rhvm` package and dependencies:
@@ -119,14 +117,7 @@ Reboot the machine if any kernel-related packages have been updated.
 [discrete]
 ==== Configuring the Manager
 
-(in progress)
-
-After you have installed the `rhvm` package and dependencies, you must configure the Manager using the `engine-setup` command. This command asks you a series of questions and, after you provide the required values for all questions, applies that configuration and starts the `ovirt-engine` service. `engine-setup` also creates and configures the Manager database locally on the Manager machine.
-
-[IMPORTANT]
-====
-Suggested configuration defaults are provided in square brackets; if the suggested value is acceptable for a given step, press `Enter` to accept that value.
-====
+The `engine-setup` command asks you a series of configuration questions, applies that configuration, and starts the `ovirt-engine` service. `engine-setup` also creates and configures the Engine and Data Warehouse databases.
 
 . Run the `engine-setup` command to begin configuration: 
 +
@@ -135,28 +126,28 @@ Suggested configuration defaults are provided in square brackets; if the suggest
 # engine-setup
 ----
 
-. Press `Enter` to configure the Manager: 
+. Press `Enter` to configure the Manager on your local host: 
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Configure Engine on this host (Yes, No) [Yes]:
 ----
 
-. Configure the Image I/O Proxy (`ovirt-imageio-proxy`) to allow the Manager to upload images to storage domains: 
+. Press `Enter` to configure the Image I/O Proxy (`ovirt-imageio-proxy`), which enables the Manager to upload images to storage domains: 
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Configure Image I/O Proxy on this host? (Yes, No) [Yes]:
 ----
 
-. Configure a websocket proxy server to allow users to connect to virtual machines via the noVNC or HTML 5 consoles: 
+. Press `Enter` to configure a websocket proxy server, which enables users to connect to virtual machines via the noVNC or HTML 5 consoles: 
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Configure WebSocket Proxy on this machine? (Yes, No) [Yes]:
 ----
 
-. Configure the Data Warehouse on the Manager machine *(%AP: Is there any reason for them not to have local DWH host? Do we need to provide remote host options?)*:
+. Press `Enter` to configure the Data Warehouse on the Manager machine:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -164,15 +155,14 @@ Please note: Data Warehouse is required for the engine. If you choose to not con
 Configure Data Warehouse on this host (Yes, No) [Yes]:
 ----
 
-. Allow access to a virtual machines's serial console from the command line:
+. Press `Enter` to enable access to a virtual machines's serial console from the command line:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Configure VM Console Proxy on this host (Yes, No) [Yes]:
 ----
-Additional configuration is required on the client machine to use this feature. See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/virtual_machine_management_guide/#Opening_a_Serial_Console_to_a_Virtual_Machine[Opening a Serial Console to a Virtual Machine] in the _Virtual Machine Management Guide_. *(%AP: Do we need to include this?)*
 
-. Install Open Virtual Network (OVN) as an external network provider:
+. Press `Enter` to install Open Virtual Network (OVN) as an external network provider:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -181,7 +171,7 @@ Configure ovirt-provider-ovn (Yes, No) [Yes]:
 +
 The default cluster uses OVN as its default network provider. Hosts added to the default cluster are automatically configured to communicate with OVN.
 
-. Accept the automatically detected host name or enter an alternative host name and press `Enter`:
+. Press `Enter` to accept the automatically detected host name or enter an alternative host name and press `Enter`:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -190,7 +180,7 @@ Host fully qualified DNS name of this server [_autodetected host name_]:
 +
 If you are using virtual hosts, the automatically detected host name may be incorrect.
 
-. The `engine-setup` command checks your firewall configuration and offers to modify that configuration to open the ports used by the Manager for external communication such as TCP ports 80 and 443. If you do not allow `engine-setup` to modify your firewall configuration, you must manually open the ports used by the Manager. Firewalld is configured as the firewall manager because iptables have been deprecated.
+. Press `Enter` to configure Firewalld as the default firewall:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -199,66 +189,29 @@ Note: automatic configuration of the firewall may overwrite current settings.
 NOTICE: iptables is deprecated and will be removed in future releases
 Do you want Setup to configure the firewall? (Yes, No) [Yes]:
 ----
-If you choose to automatically configure the firewall, and no firewall managers are active, you are prompted to select your chosen firewall manager from a list of supported options. Type the name of the firewall manager and press `Enter`. This applies even in cases where only one option is listed. *(%AP: Do we need to give choice of firewalls or is it OK to have user select default?)*
 
-. Select a local PostgreSQL database for the Data Warehouse:
+. Press `Enter` to create a local Data Warehouse database:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Where is the DWH database located? (Local, Remote) [Local]:
 ----
-*(%AP: Is it OK to only give default values for local DB? Or do we need to explain options for remote DB?)*
-** If you select `Local`, the `engine-setup` command can configure your database automatically (including adding a user and a database), or it can connect to a preconfigured local database:
+
+. Press `Enter` to automatically configure the Data Warehouse database:
 +
-[options="nowrap" subs="+quotes,verbatim"]
 ----
 Setup can configure the local postgresql server automatically for the DWH to run. This may conflict with existing applications.
 Would you like Setup to automatically configure postgresql and create DWH database, or prefer to perform that manually? (Automatic, Manual) [Automatic]:
 ----
-+
-*** If you select `Automatic` by pressing `Enter`, no further action is required here.
-*** If you select `Manual`, input the following values for the manually-configured local database:
-+
-[options="nowrap" subs="+quotes,verbatim"]
-----
-DWH database secured connection (Yes, No) [No]:
-DWH database name [ovirt_engine_history]:
-DWH database user [ovirt_engine_history]:
-DWH database password:
-----
 
-+
-[NOTE]
-====
-`engine-setup` requests these values after the Manager database is configured in the next step. 
-====
-
-** If you select `Remote`, input the following values for the preconfigured remote database host:
-+
-[options="nowrap" subs="+quotes,verbatim"]
-----
-DWH database host [localhost]:
-DWH database port [5432]:
-DWH database secured connection (Yes, No) [No]:
-DWH database name [ovirt_engine_history]:
-DWH database user [ovirt_engine_history]:
-DWH database password:
-----
-
-+
-[NOTE]
-====
-`engine-setup` requests these values after the Manager database is configured in the next step. 
-====
-
-. Choose to use either a local or remote PostgreSQL database as the Manager database: 
+. Press `Enter` to create a local Engine database: 
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Where is the Engine database located? (Local, Remote) [Local]:
 ----
 
-** If you select `Local`, the `engine-setup` command can configure your database automatically (including adding a user and a database), or it can connect to a preconfigured local database:
+. Press `Enter` to create and configure the Engine database automatically:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -266,30 +219,7 @@ Setup can configure the local postgresql server automatically for the engine to 
 Would you like Setup to automatically configure postgresql and create Engine database, or prefer to perform that manually? (Automatic, Manual) [Automatic]:
 ----
 
-***  If you select `Automatic` by pressing `Enter`, no further action is required here.
-*** If you select `Manual`, input the following values for the manually-configured local database:
-+
-[options="nowrap" subs="+quotes,verbatim"]
-----
-Engine database secured connection (Yes, No) [No]:
-Engine database name [engine]:
-Engine database user [engine]:
-Engine database password:
-----
-
-** If you select `Remote`, input the following values for the preconfigured remote database host:
-+
-[options="nowrap" subs="+quotes,verbatim"]
-----
-Engine database host [localhost]:
-Engine database port [5432]:
-Engine database secured connection (Yes, No) [No]:
-Engine database name [engine]:
-Engine database user [engine]:
-Engine database password:
-----
-
-. Set a password for the automatically created administrative user of the Red Hat Virtualization Manager:
+. Set a password for the automatically created administrative user of the Red Hat Virtualization Manager and press `Enter`:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -297,14 +227,14 @@ Engine admin password:
 Confirm engine admin password:
 ----
 
-. Select *Both*: 
+. Press `Enter` to select both Virt and Gluster modes: 
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Application mode (Both, Virt, Gluster) [Both]:
 ----
 
-. If you installed the OVN provider, you can choose to use the default credentials, or specify an alternative.
+. If you installed the OVN provider, press `Enter` to accept the default OVN provider user and specify the OVN provider password:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -313,21 +243,21 @@ oVirt OVN provider user[admin@internal]:
 oVirt OVN provider password: 
 ----
 
-. Set the default value for the `wipe_after_delete` flag, which wipes the blocks of a virtual disk when the disk is deleted. 
+. Press `Enter` to set the default value for the `wipe_after_delete` flag, which wipes the blocks of a virtual disk when the disk is deleted, to `No`: 
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Default SAN wipe after delete (Yes, No) [No]:
 ----
 
-. The Manager uses certificates to communicate securely with its hosts. This certificate can also optionally be used to secure HTTPS communications with the Manager. Provide the organization name for the certificate:
+. The Manager uses certificates to communicate securely with its hosts. Press `Enter` to accept the auto-detected domain name for the certificate:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Organization name for certificate [_autodetected domain-based name_]:
 ----
 
-. Optionally allow `engine-setup` to make the landing page of the Manager the default page presented by the Apache web server:
+. Press `Enter` to make the welcome page of the Manager the default page presented by the Apache web server:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -335,7 +265,7 @@ Setup can configure the default page of the web server to present the applicatio
 Do you wish to set the application as the default web page of the server? (Yes, No) [Yes]:
 ----
 
-. By default, external SSL (HTTPS) communication with the Manager is secured with the self-signed certificate created earlier in the configuration to securely communicate with hosts. Alternatively, choose another certificate for external HTTPS connections; this does not affect how the Manager communicates with hosts:
+. Press `Enter` to secure external SSL (HTTPS) communication between the Manager and the hosts using the self-signed certificate created earlier in the configuration:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -343,12 +273,7 @@ Setup can configure apache to use SSL using a certificate issued from the intern
 Do you wish Setup to configure that, or prefer to perform that manually? (Automatic, Manual) [Automatic]:
 ----
 
-. Select *Basic*:
-+
-[NOTE]
-====
-This step is skipped if you chose not to configure Data Warehouse on the Manager machine.
-====
+. Press `Enter` to configure the Data Warehouse sampling scale:
 
 +
 [options="nowrap" subs="+quotes,verbatim"]
@@ -358,20 +283,26 @@ Please choose Data Warehouse sampling scale:
 (2) Full
 (1, 2)[1]:
 ----
-`Basic` reduces the values of `DWH_TABLES_KEEP_HOURLY` to `720` and `DWH_TABLES_KEEP_DAILY` to `0`, easing the load on the Manager machine (recommended when the Manager and Data Warehouse are installed on the same machine).
+`Basic` reduces the values of `DWH_TABLES_KEEP_HOURLY` to `720` and `DWH_TABLES_KEEP_DAILY` to `0`, easing the load on the Manager machine. This is recommended when the Manager and Data Warehouse are installed on the same machine.
 
-. Review the installation settings, and press `Enter` to accept the values and proceed with the installation: 
+. Review the installation settings and press `Enter` to accept the values and proceed with the installation: 
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Please confirm installation settings (OK, Cancel) [OK]:
 ----
-
 +
-When your environment has been configured, `engine-setup` displays details about how to access your environment. If you chose to manually configure the firewall, `engine-setup` provides a custom list of ports that need to be opened, based on the options selected during setup. The `engine-setup` command also saves your answers to a file that can be used to reconfigure the Manager using the same values, and outputs the location of the log file for the Red Hat Virtualization Manager configuration process.
+When your environment has been configured, `engine-setup` displays details about how to access your environment. `engine-setup` saves your answers to a file that can be used to reconfigure the Manager using the same values and outputs the location of the log file for the Red Hat Virtualization Manager configuration process.
 
-. If you intend to link your Red Hat Virtualization environment with a directory server, configure the date and time to synchronize with the system clock used by the directory server to avoid unexpected account expiry issues. See link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/System_Administrators_Guide/chap-Configuring_the_Date_and_Time.html#sect-Configuring_the_Date_and_Time-timedatectl-NTP[Synchronizing the System Clock with a Remote Server] in the _Red Hat Enterprise Linux System Administrator's Guide_ for more information. *(%AP: Can we omit this? If they're migrating a VMware system, they probably already have NTP installed and configured.)*
+. If you intend to connect your Red Hat Virtualization environment with a directory server, synchronize the system clock with a remote NTP server, to avoid unexpected account expiry issues:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# timedatectl set-ntp yes
+----
+You must have an NTP service, such as chrony, installed and running.
 
-. Install the certificate authority according to the instructions provided by your browser. You can get the certificate authority's certificate by navigating to`http://_your-manager-fqdn_/ovirt-engine/services/pki-resource?resource=ca-certificate&amp;format=X509-PEM-CA`, replacing _your-manager-fqdn_ with the fully qualified domain name (FQDN) that you provided during the installation.
+. Install the certificate authority according to the instructions provided by your browser. You can obtain the certificate authority's certificate by going to `http://_your-manager-fqdn_/ovirt-engine/services/pki-resource?resource=ca-certificate&amp;format=X509-PEM-CA`, replacing _your-manager-fqdn_ with the fully qualified domain name (FQDN) that you provided during the installation.
 
 Proceed to the next section to connect to the Administration Portal as the *admin@internal* user.
+
