--- a/doc-V2V_Guide/cfme/doc/asm_Migration.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Migration.adoc
@@ -1,17 +1,10 @@
 [[Migration]]
 == Migration
 
-UI part from CF documentation (except that it hasn't been documented yet, because it's new)
+TBD:
 
-Starting a migration plan
-
-Monitoring the migration
-
-Estimating how long migration will take
-
-Estimating the remaining migration time
-
-Viewing running migrations
+* How long will the migration take?
+* How to estimate remaining migration time
 
 include::modules/proc_Creating_a_Conversion_Host.adoc[]
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[]
