--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -20,7 +20,7 @@ You can view the status of the individual virtual machines in menu:Compute[Infra
 # tail -f /var/www/miq/vmdb/log/automation.log
 ----
 +
-You can also view the progress of each virtual machine in the conversion host log:
+You can also view the progress of each virtual machine in the conversion host log *(%AP: When I checked the conversion host, there was no /import directory in the vdsm directory)*:
 +
 [source]
 ----
