--- a/doc-V2V_Guide/cfme/doc/modules/ref_Storage.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Storage.adoc
@@ -29,6 +29,8 @@ include::proc_Adding_NFS_Storage.adoc[]
 
 ==== Adding Other Storage
 
+This section describes other forms of storage that are supported by Red Hat Virtualization.
+
 [[iSCSI]]
 [discrete]
 ==== iSCSI
