--- a/doc-Managing_Providers/topics/Ansible_Credentials.adoc
+++ b/doc-Managing_Providers/topics/Ansible_Credentials.adoc
@@ -5,12 +5,7 @@ Credentials are utilized by {product-title} for authentication when running Ansi
 
 == Adding Credentials
 {product-title} can store credentials used by playbooks. Credentials saved in {product-title_short} are matched and executed with a playbook when run.   
-/////
-[IMPORTANT]
-====
-If both {product-title_short} and a VMware provider are located in the same IPv6-only network, use a DNS-resolvable hostname for the VMware provider in the *vCenter Host* field when adding credentials.
-====
-/////
+
 . Navigate to menu:Automation[Ansible > Credentials].
 . Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Add a New Credential] (*Add a New Credential*).
 . Provide a *Name* for the credential.
@@ -146,7 +141,7 @@ Selecting this credential type enables synchronization of cloud inventory with R
 Red Hat Virtualization credentials have several attributes that may be configured:
 
 * *Username*: The username to use to connect to Red Hat Virtualization.
-* *Password*: The password to use to connect to Red Hat Virtaulization.
+* *Password*: The password to use to connect to Red Hat Virtualization.
 * *Host (Authentication URL)*: The host to be used for authentication.
 +
 [IMPORTANT]
